@@ -1,3 +1,5 @@
+06-Sep-2011 Adding a test to determine if duplicate package definition schemas are present. This can happen when both Debug and Release builds are present.
+
 06-Sep-2011 WindowsSDK-6.0 package now also checks in the VisualC install path for a 'PlatformSDK' directory, if it cannot find WindowsSDK in the registry.
 
 06-Sep-2011 Opus.Core.RelativePathUtilities.GetPath now unescapes all relative paths. This seems to be necessary for VisualStudio projects with the build root on the same drive as VisualStudio.
